Added Goal Plan and Tasks - Big update
